<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected_device_name_label"
        android:layout_marginTop="64dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/connected_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rssi"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rssi_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status_label"
        android:layout_marginTop="32dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="-"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_characteristic_label"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/characteristic_TextView"
        android:layout_marginTop="24dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/request_read_characteristic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/request_read_characteristic"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:background="?attr/colorPrimary"
        android:padding="8dp"
        android:elevation="4dp"/>


</LinearLayout>