<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_app_role"
        android:layout_marginTop="64dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_role_peripheral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/button_role_peripheral"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:background="?attr/colorPrimary"
        android:padding="8dp"
        android:elevation="4dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_role_central"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/button_role_central"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:background="?attr/colorPrimary"
        android:padding="8dp"
        android:elevation="4dp"/>


</LinearLayout>